2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/treesit-config.el (treesit-language-source-alist): Set
	revisions of c and markdown grammar to the versions of API 14.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* init.el (webjump): Add yhetil.org.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/treesit-config.el: New file.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* init.el (mode-specific-map): Remove duplicated `toggle-map'
	binding.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add gptel-aibo.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/telega-config.el: Hide telegram buffers from results
	of `consult-buffer'.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	Switch to motion state in `magit-blob-mode'

	* init.el (+meow-maybe-switch-to-motion): New function.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (kimi-coder): Update system message.

2025-07-31  Zhengyi Fu  <i@fuzy.me>

	Move packages I don't maintain to site-lisp/obsoletes

	* site-lisp/obsoletes/quick-init.el:
	* site-lisp/obsoletes/persp-mode-config.el:
	* site-lisp/obsoletes/outline2org.el:
	* site-lisp/obsoletes/linkding.el:
	* site-lisp/obsoletes/gtkdoc.el:
	* site-lisp/obsoletes/gpg-agent.el:
	* site-lisp/obsoletes/dynamic-highlight.el:
	* site-lisp/obsoletes/dch.el:
	* site-lisp/obsoletes/consult-omni-kagi.el:
	* site-lisp/obsoletes/activities-persist-buffers.el:

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	* init.el (mode-specific-map): Bind "T" to `telega'.
	(tool-map): Bind "c" to `telega-chat-with'.

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Remove the default ChatGPT backend.

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	Set up load-path for flymake

	* init.el (straight--add-package-to-load-path): New advice.

2025-07-30  Zhengyi Fu  <i@fuzy.me>

	Add configuration for telega

	* site-lisp/telega-config.el: New file.
	* packages.el: Add telega.
	* init.el: Load configuration file for telega.

2025-07-30  Zhengyi Fu  <i@fuzy.me>
