@@ -1,5 +1,16 @@
 2025-07-31  Zhengyi Fu  <i@fuzy.me>
 
+	Update modify-other-keys.el
+
+	* site-lisp/modify-other-keys.el
+	(modify-other-keys--setup-input-decode-map): Use angled symbol
+	names for special whitespace keys.
+	(modify-other-keys--translate-shifted-digits): New function.
+	Translate shifted digits in `local-function-key-map'.
+	(modify-other-keys--init): Call it.
+
+2025-07-31  Zhengyi Fu  <i@fuzy.me>
+
 	* site-lisp/treesit-config.el (treesit-language-source-alist): Set
 	revisions of c and markdown grammar to the versions of API 14.
 
